k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-next-deployment
spec:
  selector:
    matchLabels:
      app: django-next-deployment
  template:
    metadata:
      labels:
        app: django-next-deployment
    spec:
      containers:
      - name: django-next-deployment
        image: raidsulin/django-nextjs-web:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: django-nextjs-service
spec:
  selector:
    app: django-next-deployment
  ports:
  - protocol: TCP
    port: 8002
    targetPort: 8002
  type: LoadBalancer
